--- a/todos/templates/todos/index.html
+++ b/todos/templates/todos/index.html
@@ -12,7 +12,7 @@
     <div class="offset-md-2 col-lg-9">
       <div class="page-header">
         <h1>
-          Todo List-amit
+          Todo List-devops
         </h1>
       </div>
     </div>
